--- a/css/app.css
+++ b/css/app.css
@@ -202,7 +202,7 @@
   width: 85.95989%; }
 
 .hero__heading {
-  background-image: url('https://avatars.githubusercontent.com/u/18683650?v=4');
+  background-image: url('img/workflowautomationexpert_logo');
   background-size: 100% 100%;
   float: left;
   height: 150px;
