Our Lord Jesus Christ is an awesome God

--- a/css/app.css
+++ b/css/app.css
@@ -202,7 +202,7 @@
   width: 85.95989%; }
 
 .hero__heading {
-  background-image: url('../img/workflowautomationexpert_logo');
+  background-image: url('../img/workflowautomationexpert_logo.png');
   background-size: 100% 100%;
   float: left;
   height: 150px;
