Our Lord Jesus Christ is an awesome God

--- a/css/app.css
+++ b/css/app.css
@@ -570,7 +570,7 @@ ul.status .in {
 }
 
 ul.status .in:before {
-  content: "Available";
+  content: "I'm Available";
   background-color: #5fcf80;
 }
 
