--- a/css/app.css
+++ b/css/app.css
@@ -570,7 +570,7 @@ ul.status .in {
 }
 
 ul.status .in:before {
-  content: "I'm Available";
+  content: "👨🏾‍💻 Available";
   background-color: #5fcf80;
 }
 
