--- a/css/app.css
+++ b/css/app.css
@@ -528,6 +528,37 @@
   padding: 0.75em 90px 0.75em 0.75em;
   width: 100%; }
 
+  a {
+    text-decoration: none !important;
+}
+
+a:hover {
+  text-decoration: none !important;
+    cursor:pointer;  
+}
+
+  .button__click {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    -o-appearance: none;
+    appearance: none;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 1px solid #000000;
+    border-radius: 0;
+    display: block;
+    cursor: pointer;
+    font: bold 18px/1.5em "Avenir Next", sans-serif;
+    margin: 10px 0 0 0;
+    padding: 0.75em;
+    width: 100%;}
+    .button__click:hover {
+    color: #7713fe; }
+
 .with-links-form__label {
   display: block;
   font: italic 18px/1.5em "Georgia", sans-serif; }
