Lord Jesus Christ is my guide and advisor

--- a/css/app.css
+++ b/css/app.css
@@ -529,11 +529,13 @@
   width: 100%; }
 
   a {
-    text-decoration: none !important;
+    color:#000000; 
+    text-decoration;
 }
 
 a:hover {
-  text-decoration: none !important;
+  color:#000000; 
+  text-decoration;
     cursor:pointer;  
 }
 
