--- a/css/app.css
+++ b/css/app.css
@@ -28,6 +28,11 @@
       margin: 40px auto 0 auto;
       width: 83.09456%; } }
 
+.about__subheading {
+  font: bold 30px/1.5em "Avenir Next", sans-serif;
+  margin: 0; }
+
+
 .associate {
   margin: 65px 0 0 0; }
 
