--- a/css/app.css
+++ b/css/app.css
@@ -28,9 +28,13 @@
       margin: 40px auto 0 auto;
       width: 83.09456%; } }
 
+.about__heading {
+  font: bold 30px/1.5em "Georgia", sans-serif;
+  margin: 40px 0 0 8.45272%; }
+
 .about__subheading {
-  font: bold 30px/1.5em "Avenir Next", sans-serif;
-  margin: 0; }
+  font: bold 25px/1.5em "Avenir Next", sans-serif;
+  margin: 40px 0 0 8.45272%; }
 
 
 .associate {
