--- a/css/app.css
+++ b/css/app.css
@@ -43,13 +43,14 @@
   -o-transition: opacity 0.25s;
   transition: opacity 0.25s;
   list-style: none;
-  margin: 40px 0 0 0;
+margin: 40px auto 0 auto;
   opacity: 0.5;
   padding: 0; }
 
 .about__list__item {
-  font: 18px/1.5em "Georgia", sans-serif;
-  margin: 40px 0 0 0;
+  font: 30px/1.5em "Georgia", sans-serif;
+	margin: 40px auto 0 auto;
+	width: 83.09456%; 
 }
 
 
