--- a/css/app.css
+++ b/css/app.css
@@ -43,7 +43,7 @@
   -o-transition: opacity 0.25s;
   transition: opacity 0.25s;
   list-style: none;
-margin: 40px auto 0 auto;
+margin: 40px;
   opacity: 0.5;
   padding: 0; }
 
